# hudagents

./: .gitignore  :w  AGENTS.md  Cargo.toml  README.md  hudagents-rust-notes.md
crates/actor_model/: Cargo.toml  README.md
crates/actor_model/src/: lib.rs
crates/fsm_dag/: Cargo.toml  README.md
crates/fsm_dag/src/: lib.rs
crates/hudagents-capture/: Cargo.toml
crates/hudagents-capture/src/: main.rs
crates/hudagents-core/: Cargo.toml  README.md
crates/hudagents-core/src/: lib.rs
crates/hudagents-core/src/agent/: mod.rs
crates/hudagents-core/src/agent/speech_to_text/: mod.rs
crates/hudagents-core/src/agent/speech_to_text/test_data/: bad-m4a.m4a  good-m4a.m4a
crates/hudagents-core/src/agent/vision/: mod.rs
crates/hudagents-core/src/context/: blob.rs  ids.rs  message.rs  mod.rs  runtime.rs  session.rs
crates/hudagents-core/src/graph/: mod.rs
crates/hudagents-core/src/orchestrator/: mod.rs
crates/hudagents-core/src/runtime/: mod.rs
crates/hudagents-local/: Cargo.toml  README.md
crates/hudagents-local/src/: lib.rs
crates/hudagents-local/src/whisper/: mod.rs
crates/hudagents-tools/: Cargo.toml  README.md
crates/hudagents-tools/src/: main.rs
crates/workflow-orchestrator/: Cargo.toml  README.md
crates/workflow-orchestrator/src/: lib.rs
docs/: 01_mission.md
