[package]
name = "actor_model"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time", "test-util", "macros", "rt-multi-thread", "sync"] }
