[package]
name = "hudagents-local"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
whisper-rs = { workspace = true }
reqwest = { workspace = true }
