[package]
name = "hudagents-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hudagents-local.workspace = true
