[package]
name = "workflow-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
actor_model = { path = "../actor_model" }
fsm_dag = { path = "../fsm_dag" }
